--- a/css/main.css
+++ b/css/main.css
@@ -45,8 +45,9 @@ body {
 
 .card-item {
     padding: 10px;
-    min-width: 25%;
+    width: 25%;
     border-radius: 10px;
+    word-wrap: normal;
     border: solid 2px black;
     background-color: white;
     box-shadow: 10px 10px 15px 3px rgba(0, 0, 0, 0.2);
